TestForce/src/objects/Performance_Log__c.object
<CustomObject>
    <fields>
        <fullName>Page_Generation_Time__c</fullName>
        <label>Page Generation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requesting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Performance Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PerfLog-{0000000}</displayFormat>
        <label>Performance Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>